--- a/src/algovisual/GUI.css
+++ b/src/algovisual/GUI.css
@@ -5,7 +5,7 @@ and open the template in the editor.
 */
 /* 
     Created on : 08/08/2016, 2:39:04 PM
-    Author     : meng
+    Author     : hugh
 */
 
 .box {
